--- a/css/index.css
+++ b/css/index.css
@@ -237,7 +237,13 @@ button {
 
 @media (min-width: 768px) and (max-width: 1200px) {
 
-
+.main-container {
+  flex-grow: 1;
+  
+  display: flex;
+  flex-direction: row;
+  gap: 80px;
+}
 
     .text {
       color: white;
@@ -295,7 +301,7 @@ button {
       font-size: 16px;
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 94px;
   
     }
   
@@ -314,6 +320,7 @@ button {
     .cards {
       min-width: 200px;
       max-width: 400px;
+      margin-left: 40px;
       flex: 1;
       border-radius: 4px;
       border: 1px solid grey;
