--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ html{
   height: 215px;
   width: 215px;
   display: flex;
-  
+  margin: 0 auto;
   
 }
 
@@ -141,7 +141,7 @@ button {
 
 .main-container {
   flex-grow: 1;
-  
+  margin-top: 1px;
   display: flex;
   flex-direction: row;
   gap: 20px;
