Добавила футер в адаптив

--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,7 @@ html{
     position: absolute;
     bottom: 0;
     width: 100%;
-    
+  
     background: #005bff;
 }
 
@@ -343,6 +343,14 @@ button {
 }
 
 @media (max-width: 767px) {
+  .footer {
+    position: absolute;
+    bottom: -600px;
+    width: 100%;
+  
+    background: #005bff;
+}
+
   .main-container {
       flex-grow: 1;
       margin-left: 10px;
